--- a/package.json
+++ b/package.json
@@ -38,7 +38,13 @@
     "make-node": "0.3.x",
     "mocha": "2.x.x",
     "chai": "2.x.x",
-    "chai-passport-strategy": "1.x.x"
+    "chai-passport-strategy": "1.x.x",
+    "express": "*",
+    "passport": "*",
+    "cookie-parser": "*",
+    "express-session": "*",
+    "express-error-handler": "*",
+    "connect-ensure-login": "*"
   },
   "engines": {
     "node": ">= 0.4.0"
